force-app/main/default/objects/Field_Service_Settings__c/Field_Service_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Field Service Settings</label>
</CustomObject>