force-app/main/default/objects/Field_Service_Settings__c/fields/Account_Ship_To_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Ship_To_Record_Type_Id__c</fullName>
    <label>Account Ship To Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>