force-app/main/default/objects/Field_Service_Settings__c/fields/Accounts_Receivable_Queue__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Receivable_Queue__c</fullName>
    <label>Accounts Receivable Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>