force-app/main/default/objects/Field_Service_Settings__c/fields/Activate_Logic_for_Services__c.field-meta.xml
<CustomField>
    <fullName>Activate_Logic_for_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Logic for Services</label>
    <type>Checkbox</type>
</CustomField>