force-app/main/default/objects/Field_Service_Settings__c/fields/Activate_Override_SO_Price_Engine__c.field-meta.xml
<CustomField>
    <fullName>Activate_Override_SO_Price_Engine__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is used to control overriding the Standing Order Price Engine for Work Order Line Items that become &quot;Cannot Complete&quot;. If active, the Service Price Per Unit on the related Order Product will be set to $0 on Pest/Emergency Work Orders.</inlineHelpText>
    <label>Activate Override SO Price Engine</label>
    <type>Checkbox</type>
</CustomField>