force-app/main/default/objects/Field_Service_Settings__c/fields/Activate_Pest_Emergency_Email_Logic__c.field-meta.xml
<CustomField>
    <fullName>Activate_Pest_Emergency_Email_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This setting controls if an email is to be sent to a Service Appointment&apos;s Ship To Contact upon the Service Appointment becoming &quot;Dispatched&quot; if the line of business is Pest Control and is flagged as Emergency.</inlineHelpText>
    <label>Activate Pest Emergency Email Logic</label>
    <type>Checkbox</type>
</CustomField>