force-app/main/default/objects/Field_Service_Settings__c/fields/Activate_Pre_Approved_Pricing_Logic__c.field-meta.xml
<CustomField>
    <fullName>Activate_Pre_Approved_Pricing_Logic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to control if pre-approved prices from Opportunity Line Items carries over to Order Items.</inlineHelpText>
    <label>Activate Pre-Approved Pricing Logic</label>
    <type>Checkbox</type>
</CustomField>