force-app/main/default/objects/Field_Service_Settings__c/fields/Activate_Threshold_Logic_for_Orders__c.field-meta.xml
<CustomField>
    <fullName>Activate_Threshold_Logic_for_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to control is threshold logic is used for Order Products with Equipment and Consumable Products</inlineHelpText>
    <label>Activate Threshold Logic for Orders</label>
    <type>Checkbox</type>
</CustomField>