force-app/main/default/objects/Field_Service_Settings__c/fields/App_Support_Team_Queue__c.field-meta.xml
<CustomField>
    <fullName>App_Support_Team_Queue__c</fullName>
    <label>App Support Team Queue</label>
    <length>32</length>
    <type>Text</type>
</CustomField>