force-app/main/default/objects/Field_Service_Settings__c/fields/Are_Service_Crews_Active__c.field-meta.xml
<CustomField>
    <fullName>Are_Service_Crews_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are Service Crews Active</label>
    <type>Checkbox</type>
</CustomField>