force-app/main/default/objects/Field_Service_Settings__c/fields/Billing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Billing_Queue__c</fullName>
    <label>Billing Queue</label>
    <length>32</length>
    <type>Text</type>
</CustomField>