force-app/main/default/objects/Field_Service_Settings__c/fields/Billing_Team__c.field-meta.xml
<CustomField>
    <fullName>Billing_Team__c</fullName>
    <label>Billing Team</label>
    <length>18</length>
    <type>Text</type>
</CustomField>