force-app/main/default/objects/Field_Service_Settings__c/fields/Cannot_Complete_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Complete_Status_Value__c</fullName>
    <label>Cannot Complete Status Value</label>
    <length>15</length>
    <type>Text</type>
</CustomField>