force-app/main/default/objects/Field_Service_Settings__c/fields/Case_Type_for_Internal_Data_Review__c.field-meta.xml
<CustomField>
    <fullName>Case_Type_for_Internal_Data_Review__c</fullName>
    <label>Case Type for Internal Data Review</label>
    <length>15</length>
    <type>Text</type>
</CustomField>