force-app/main/default/objects/Field_Service_Settings__c/fields/Change_Location_Preferences_Subject__c.field-meta.xml
<CustomField>
    <fullName>Change_Location_Preferences_Subject__c</fullName>
    <description>The standard subject for a Internal Data Review (Tech) ticket/case created by the &quot;Change Location Preferences&quot; Site Survey action.</description>
    <label>Change Location Preferences Subject</label>
    <length>30</length>
    <type>Text</type>
</CustomField>