force-app/main/default/objects/Field_Service_Settings__c/fields/Chemical_LOB__c.field-meta.xml
<CustomField>
    <fullName>Chemical_LOB__c</fullName>
    <label>Chemical LOB</label>
    <length>25</length>
    <type>Text</type>
</CustomField>