force-app/main/default/objects/Field_Service_Settings__c/fields/Chemical_Work_Type_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Chemical_Work_Type_Detailed__c</fullName>
    <label>Chemical Work Type - Detailed</label>
    <length>18</length>
    <type>Text</type>
</CustomField>