force-app/main/default/objects/Field_Service_Settings__c/fields/CitronDoNotReply__c.field-meta.xml
<CustomField>
    <fullName>CitronDoNotReply__c</fullName>
    <label>CitronDoNotReply</label>
    <type>Email</type>
</CustomField>