force-app/main/default/objects/Field_Service_Settings__c/fields/Community_Reporting_Detail_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_Reporting_Detail_Profile_ID__c</fullName>
    <inlineHelpText>Profile to use when &quot;Reporting Detail&quot; is enabled on the account</inlineHelpText>
    <label>Community Reporting Detail Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>