force-app/main/default/objects/Field_Service_Settings__c/fields/Community_User_Default_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Default_Time_Zone__c</fullName>
    <label>Community User Default Time Zone</label>
    <length>25</length>
    <type>Text</type>
</CustomField>