force-app/main/default/objects/Field_Service_Settings__c/fields/Community_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Community_User_Profile__c</fullName>
    <description>Profile to be used when system generates a profile, from Community_Contact__c field on Opportunity.</description>
    <label>Community User Profile</label>
    <length>18</length>
    <type>Text</type>
</CustomField>