force-app/main/default/objects/Field_Service_Settings__c/fields/CongaEmailTemplateId__c.field-meta.xml
<CustomField>
    <fullName>CongaEmailTemplateId__c</fullName>
    <label>CongaEmailTemplateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>