force-app/main/default/objects/Field_Service_Settings__c/fields/Consumables_Discount_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Consumables_Discount_Threshold__c</fullName>
    <label>Consumables Discount Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>