force-app/main/default/objects/Field_Service_Settings__c/fields/ContactEmailQueryId__c.field-meta.xml
<CustomField>
    <fullName>ContactEmailQueryId__c</fullName>
    <label>ContactEmailQueryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>