force-app/main/default/objects/Field_Service_Settings__c/fields/CS_Chemical_Queue__c.field-meta.xml
<CustomField>
    <fullName>CS_Chemical_Queue__c</fullName>
    <label>CS Chemical Queue</label>
    <length>32</length>
    <type>Text</type>
</CustomField>