force-app/main/default/objects/Field_Service_Settings__c/fields/CS_Data_Cleanup__c.field-meta.xml
<CustomField>
    <fullName>CS_Data_Cleanup__c</fullName>
    <label>CS Data Cleanup</label>
    <length>32</length>
    <type>Text</type>
</CustomField>