force-app/main/default/objects/Field_Service_Settings__c/fields/CS_Orders__c.field-meta.xml
<CustomField>
    <fullName>CS_Orders__c</fullName>
    <label>CS Orders</label>
    <length>32</length>
    <type>Text</type>
</CustomField>