force-app/main/default/objects/Field_Service_Settings__c/fields/Custom_Permission_for_Skill_Tab__c.field-meta.xml
<CustomField>
    <fullName>Custom_Permission_for_Skill_Tab__c</fullName>
    <label>Custom Permission for Skill Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>