force-app/main/default/objects/Field_Service_Settings__c/fields/Customer_Service_Queue__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Queue__c</fullName>
    <label>Customer Service Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>