force-app/main/default/objects/Field_Service_Settings__c/fields/Customer_Success_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Email_Id__c</fullName>
    <label>Customer Success Email Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>