force-app/main/default/objects/Field_Service_Settings__c/fields/Customer_Success_OWA_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_OWA_Id__c</fullName>
    <inlineHelpText>The ID of the &quot;Customer Success&quot; organization-wide address</inlineHelpText>
    <label>Customer Success OWA Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>