force-app/main/default/objects/Field_Service_Settings__c/fields/Customer_Success_Queue__c.field-meta.xml
<CustomField>
    <fullName>Customer_Success_Queue__c</fullName>
    <label>Customer Success Queue</label>
    <length>32</length>
    <type>Text</type>
</CustomField>