force-app/main/default/objects/Field_Service_Settings__c/fields/Default_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Default_Business_Hours__c</fullName>
    <label>Default Business Hours</label>
    <length>20</length>
    <type>Text</type>
</CustomField>