force-app/main/default/objects/Field_Service_Settings__c/fields/Default_Frequency_on_Shopping_Cart__c.field-meta.xml
<CustomField>
    <fullName>Default_Frequency_on_Shopping_Cart__c</fullName>
    <label>Default Frequency on Shopping Cart</label>
    <length>15</length>
    <type>Text</type>
</CustomField>