force-app/main/default/objects/Field_Service_Settings__c/fields/Default_Opportunity_Price_Book_ID__c.field-meta.xml
<CustomField>
    <fullName>Default_Opportunity_Price_Book_ID__c</fullName>
    <label>Default Opportunity Price Book ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>