force-app/main/default/objects/Field_Service_Settings__c/fields/Default_Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Default_Skill_Level__c</fullName>
    <label>Default Skill Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>