force-app/main/default/objects/Field_Service_Settings__c/fields/DeInstall_Work_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>DeInstall_Work_Order_Type__c</fullName>
    <label>DeInstall Work Order Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>