force-app/main/default/objects/Field_Service_Settings__c/fields/Delivery_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Work_Type__c</fullName>
    <label>Delivery Work Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>