force-app/main/default/objects/Field_Service_Settings__c/fields/Duration_Type_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Type_Minutes__c</fullName>
    <label>Duration Type Minutes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>