force-app/main/default/objects/Field_Service_Settings__c/fields/Emergency_Service_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Service_Start_Time__c</fullName>
    <label>Emergency Service Start Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>