force-app/main/default/objects/Field_Service_Settings__c/fields/Enable_Automatic_WO_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>Enable_Automatic_WO_Completed_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Automatic WO Completed Status</label>
    <type>Checkbox</type>
</CustomField>