force-app/main/default/objects/Field_Service_Settings__c/fields/Finance_Master_Data_Queue__c.field-meta.xml
<CustomField>
    <fullName>Finance_Master_Data_Queue__c</fullName>
    <label>Finance Master Data Queue</label>
    <length>32</length>
    <type>Text</type>
</CustomField>