force-app/main/default/objects/Field_Service_Settings__c/fields/Fixed_Weekly_Service_Frequency_Value__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Weekly_Service_Frequency_Value__c</fullName>
    <label>Fixed Weekly Service Frequency Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>