force-app/main/default/objects/Field_Service_Settings__c/fields/FSL_Tech_Pest_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>FSL_Tech_Pest_Profile_Id__c</fullName>
    <label>FSL Tech Pest Profile Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>