force-app/main/default/objects/Field_Service_Settings__c/fields/FSLAllowActivatedOrderUpdateId__c.field-meta.xml
<CustomField>
    <fullName>FSLAllowActivatedOrderUpdateId__c</fullName>
    <label>FSLAllowActivatedOrderUpdateId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>