force-app/main/default/objects/Field_Service_Settings__c/fields/Full_Exchange_Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Full_Exchange_Product_Codes__c</fullName>
    <inlineHelpText>Comma separated Full Exchange Product Codes
*** value should ALWAYS end with a comma ***</inlineHelpText>
    <label>Full Exchange Product Codes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>