force-app/main/default/objects/Field_Service_Settings__c/fields/Health_Safety_Orientation_Skill_ID__c.field-meta.xml
<CustomField>
    <fullName>Health_Safety_Orientation_Skill_ID__c</fullName>
    <inlineHelpText>Record ID for skill that represents the &quot;Health Safety Orientation&quot; skill</inlineHelpText>
    <label>Health Safety Orientation Skill ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>