force-app/main/default/objects/Field_Service_Settings__c/fields/Home_Base_Technician_Picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>Home_Base_Technician_Picklist_Value__c</fullName>
    <label>Home Base Technician Picklist Value</label>
    <length>15</length>
    <type>Text</type>
</CustomField>