force-app/main/default/objects/Field_Service_Settings__c/fields/Hygiene_LOB__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_LOB__c</fullName>
    <label>Hygiene LOB</label>
    <length>25</length>
    <type>Text</type>
</CustomField>