force-app/main/default/objects/Field_Service_Settings__c/fields/Hygiene_Site_Survey_Approval_Queue__c.field-meta.xml
<CustomField>
    <fullName>Hygiene_Site_Survey_Approval_Queue__c</fullName>
    <label>Hygiene Site Survey Approval Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>