force-app/main/default/objects/Field_Service_Settings__c/fields/Inside_Sales_Queue__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Queue__c</fullName>
    <label>Inside Sales Queue</label>
    <length>32</length>
    <type>Text</type>
</CustomField>