force-app/main/default/objects/Field_Service_Settings__c/fields/Inside_Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Team__c</fullName>
    <label>Inside Sales Team</label>
    <length>18</length>
    <type>Text</type>
</CustomField>