force-app/main/default/objects/Field_Service_Settings__c/fields/Installation_Cleanup_Duration__c.field-meta.xml
<CustomField>
    <fullName>Installation_Cleanup_Duration__c</fullName>
    <inlineHelpText>Additional time required on a installation work type to account for site cleanup, in Minutes.</inlineHelpText>
    <label>Installation Cleanup Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>