force-app/main/default/objects/Field_Service_Settings__c/fields/Integration_User_Profile__c.field-meta.xml
<CustomField>
    <fullName>Integration_User_Profile__c</fullName>
    <description>Profile to be excluded from validation rules</description>
    <label>Integration User Profile</label>
    <length>18</length>
    <type>Text</type>
</CustomField>