force-app/main/default/objects/Field_Service_Settings__c/fields/Internal_Case_Accepted_Status__c.field-meta.xml
<CustomField>
    <fullName>Internal_Case_Accepted_Status__c</fullName>
    <label>Internal Case Accepted Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>