force-app/main/default/objects/Field_Service_Settings__c/fields/Internal_Data_Review_Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Internal_Data_Review_Case_Owner__c</fullName>
    <label>Internal Data Review Case Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>