force-app/main/default/objects/Field_Service_Settings__c/fields/Internal_Data_Review_Case_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Internal_Data_Review_Case_Record_Type_ID__c</fullName>
    <label>Internal Data Review Case Record Type ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>