force-app/main/default/objects/Field_Service_Settings__c/fields/Invoice_Information_Case_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Information_Case_RecordTypeId__c</fullName>
    <label>Invoice Information Case RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>