force-app/main/default/objects/Field_Service_Settings__c/fields/Item_Type_for_Consumables__c.field-meta.xml
<CustomField>
    <fullName>Item_Type_for_Consumables__c</fullName>
    <label>Item Type for Consumables</label>
    <length>15</length>
    <type>Text</type>
</CustomField>