force-app/main/default/objects/Field_Service_Settings__c/fields/Item_Type_for_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Item_Type_for_Equipment__c</fullName>
    <label>Item Type for Equipment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>