force-app/main/default/objects/Field_Service_Settings__c/fields/Item_Type_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Item_Type_of_Services__c</fullName>
    <label>Item Type of Services</label>
    <length>15</length>
    <type>Text</type>
</CustomField>