force-app/main/default/objects/Field_Service_Settings__c/fields/Label_for_Delivery_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Label_for_Delivery_Work_Type__c</fullName>
    <label>Label for Delivery Work Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>