force-app/main/default/objects/Field_Service_Settings__c/fields/Life_Safety_LOB__c.field-meta.xml
<CustomField>
    <fullName>Life_Safety_LOB__c</fullName>
    <label>Life Safety LOB</label>
    <length>25</length>
    <type>Text</type>
</CustomField>