force-app/main/default/objects/Field_Service_Settings__c/fields/Life_Safety_Work_Type_Non_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Life_Safety_Work_Type_Non_Detailed__c</fullName>
    <label>Life Safety Work Type - Non Detailed</label>
    <length>18</length>
    <type>Text</type>
</CustomField>