force-app/main/default/objects/Field_Service_Settings__c/fields/LocationsPerPage__c.field-meta.xml
<CustomField>
    <fullName>LocationsPerPage__c</fullName>
    <label>LocationsPerPage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>