force-app/main/default/objects/Field_Service_Settings__c/fields/Missed_SA_Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Missed_SA_Status_Value__c</fullName>
    <label>Missed SA Status Value</label>
    <length>25</length>
    <type>Text</type>
</CustomField>