force-app/main/default/objects/Field_Service_Settings__c/fields/Multi_Res_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Multi_Res_Queue_Id__c</fullName>
    <label>Multi-Res Queue Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>