force-app/main/default/objects/Field_Service_Settings__c/fields/Non_Consumables_Period__c.field-meta.xml
<CustomField>
    <fullName>Non_Consumables_Period__c</fullName>
    <label>Non-Consumables Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>