force-app/main/default/objects/Field_Service_Settings__c/fields/Non_Recurring_Frequency_Value__c.field-meta.xml
<CustomField>
    <fullName>Non_Recurring_Frequency_Value__c</fullName>
    <label>Non Recurring Frequency Value</label>
    <length>15</length>
    <type>Text</type>
</CustomField>