force-app/main/default/objects/Field_Service_Settings__c/fields/Obsolete_Skill_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Obsolete_Skill_Prefix__c</fullName>
    <label>Obsolete Skill Prefix</label>
    <length>15</length>
    <type>Text</type>
</CustomField>