force-app/main/default/objects/Field_Service_Settings__c/fields/Operating_Hours_Territory__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours_Territory__c</fullName>
    <label>Operating Hours - Territory</label>
    <length>30</length>
    <type>Text</type>
</CustomField>