force-app/main/default/objects/Field_Service_Settings__c/fields/Operating_Hours_Type_Employee__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours_Type_Employee__c</fullName>
    <label>Operating Hours Type - Employee</label>
    <length>30</length>
    <type>Text</type>
</CustomField>