force-app/main/default/objects/Field_Service_Settings__c/fields/Opportunity_Case_Creation_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Case_Creation_Stage_Name__c</fullName>
    <defaultValue>&apos;Signed Awaiting Survey Approval&apos;</defaultValue>
    <label>Opportunity Case Creation Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>