force-app/main/default/objects/Field_Service_Settings__c/fields/Opportunity_Case_Rejection_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Case_Rejection_Stage_Name__c</fullName>
    <label>Opportunity Case Rejection Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>