force-app/main/default/objects/Field_Service_Settings__c/fields/Opportunity_Frequency_Change_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Frequency_Change_Stage_Name__c</fullName>
    <label>Opportunity Frequency Change Stage Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>