force-app/main/default/objects/Field_Service_Settings__c/fields/Opportunity_RecordType_Additional__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RecordType_Additional__c</fullName>
    <label>Opportunity RecordType - Additional</label>
    <length>18</length>
    <type>Text</type>
</CustomField>