force-app/main/default/objects/Field_Service_Settings__c/fields/Opportunity_RecordType_Frequency_Change__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RecordType_Frequency_Change__c</fullName>
    <label>Opportunity RecordType Frequency Change</label>
    <length>18</length>
    <type>Text</type>
</CustomField>