force-app/main/default/objects/Field_Service_Settings__c/fields/Opportunity_To_Order_Creation_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_To_Order_Creation_Stage_Name__c</fullName>
    <label>Opportunity To Order Creation Stage Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>