force-app/main/default/objects/Field_Service_Settings__c/fields/Order_Active_Stage__c.field-meta.xml
<CustomField>
    <fullName>Order_Active_Stage__c</fullName>
    <label>Order Active Stage</label>
    <length>15</length>
    <type>Text</type>
</CustomField>