force-app/main/default/objects/Field_Service_Settings__c/fields/Order_Start__c.field-meta.xml
<CustomField>
    <fullName>Order_Start__c</fullName>
    <label>Order Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>