force-app/main/default/objects/Field_Service_Settings__c/fields/Org_Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_Email_Address__c</fullName>
    <label>Org-Wide Email Address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>