force-app/main/default/objects/Field_Service_Settings__c/fields/Permission_Set_Skill_Requirement_Tab__c.field-meta.xml
<CustomField>
    <fullName>Permission_Set_Skill_Requirement_Tab__c</fullName>
    <label>Permission Set Skill Requirement Tab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>