force-app/main/default/objects/Field_Service_Settings__c/fields/Pest_Control_Work_Type_Detailed__c.field-meta.xml
<CustomField>
    <fullName>Pest_Control_Work_Type_Detailed__c</fullName>
    <label>Pest Control Work Type - Detailed</label>
    <length>18</length>
    <type>Text</type>
</CustomField>