force-app/main/default/objects/Field_Service_Settings__c/fields/Pest_LOB__c.field-meta.xml
<CustomField>
    <fullName>Pest_LOB__c</fullName>
    <label>Pest LOB</label>
    <length>15</length>
    <type>Text</type>
</CustomField>