force-app/main/default/objects/Field_Service_Settings__c/fields/Pest_Site_Survey_Approval_Queue__c.field-meta.xml
<CustomField>
    <fullName>Pest_Site_Survey_Approval_Queue__c</fullName>
    <label>Pest Site Survey Approval Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>