force-app/main/default/objects/Field_Service_Settings__c/fields/Pest_Special_Label__c.field-meta.xml
<CustomField>
    <fullName>Pest_Special_Label__c</fullName>
    <label>Pest Special Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>