force-app/main/default/objects/Field_Service_Settings__c/fields/PO_Required_Before_Label__c.field-meta.xml
<CustomField>
    <fullName>PO_Required_Before_Label__c</fullName>
    <label>PO Required Before Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>