force-app/main/default/objects/Field_Service_Settings__c/fields/QA_WorkOrder_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>QA_WorkOrder_RecordTypeId__c</fullName>
    <label>QA WorkOrder RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>