force-app/main/default/objects/Field_Service_Settings__c/fields/Regular_Order_Draft_Stage__c.field-meta.xml
<CustomField>
    <fullName>Regular_Order_Draft_Stage__c</fullName>
    <label>Regular Order Draft Stage</label>
    <length>15</length>
    <type>Text</type>
</CustomField>