force-app/main/default/objects/Field_Service_Settings__c/fields/Regular_Order_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Regular_Order_Record_Type_Id__c</fullName>
    <label>Regular Order Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>