force-app/main/default/objects/Field_Service_Settings__c/fields/Repair_WorkOrder_Case_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Repair_WorkOrder_Case_Record_Type__c</fullName>
    <label>Repair WorkOrder Case Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>