force-app/main/default/objects/Field_Service_Settings__c/fields/Requested_Price_Blank_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price_Blank_Error_Message__c</fullName>
    <label>Requested Price Blank Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>