force-app/main/default/objects/Field_Service_Settings__c/fields/SA_Vehicle_Inspection_Record_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>SA_Vehicle_Inspection_Record_Type_Id__c</fullName>
    <label>SA Vehicle Inspection Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>