force-app/main/default/objects/Field_Service_Settings__c/fields/Scan_Delimiter__c.field-meta.xml
<CustomField>
    <fullName>Scan_Delimiter__c</fullName>
    <label>Scan Delimiter</label>
    <length>5</length>
    <type>Text</type>
</CustomField>