force-app/main/default/objects/Field_Service_Settings__c/fields/Scanned_Out_Account_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Out_Account_Record_ID__c</fullName>
    <label>Scanned Out Account Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>