force-app/main/default/objects/Field_Service_Settings__c/fields/Scanned_Out_Status__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Out_Status__c</fullName>
    <label>Scanned Out Status</label>
    <length>15</length>
    <type>Text</type>
</CustomField>