force-app/main/default/objects/Field_Service_Settings__c/fields/Schedule_Window__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Window__c</fullName>
    <label>Schedule Window</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>